[package]
name = "engine"
version = "0.0.0"
authors = ["romptroll <romptroll@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#engine_core = {path = "../engine_core" }
engine_core = {git = "https://github.com/romptroll/engine_core"}
engine_renderer = {git = "https://github.com/romptroll/engine_renderer", branch = "main"}
engine_gui = {git = "https://github.com/romptroll/engine_gui"}
engine_ecs = {git = "https://github.com/romptroll/engine_ecs"}